fix wrap issue for main menu

--- a/_1327/static/scss/1327.scss
+++ b/_1327/static/scss/1327.scss
@@ -295,6 +295,11 @@ div#wrapper {
 		background-color: $gray;
 	}
 }
+
+.navbar-nav {
+	flex-wrap: wrap;
+}
+
 .dropdown-menu li a {
 	display: block;
 	padding: 3px 20px;
